--- a/tarefa2/questao1.2/index.html
+++ b/tarefa2/questao1.2/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Flexbox: Task 1</title>
+    <title>Flexbox: Task 2</title>
 
     <style>
       body {
@@ -18,7 +18,7 @@
         margin: 0;
       }
 
-      nav ul {
+      ul {
         display: flex;
         justify-content: space-between;
         max-width: 700px;
@@ -27,27 +27,26 @@
         margin: 0;
       }
 
-      nav a:link,
-      nav a:visited {
+      li {
+        flex: 1;
         background-color: #4d7298;
         border: 2px solid #77a6b6;
         border-radius: 0.5em;
         color: #fff;
         padding: 0.5em;
-        display: inline-block;
-        text-decoration: none;
       }
     </style>
   </head>
 
   <body>
-    <nav>
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/about">About Us</a></li>
-        <li><a href="/products">Our Products</a></li>
-        <li><a href="/contact">Contact Us</a></li>
-      </ul>
-    </nav>
+    <ul>
+      <li>I am small</li>
+      <li>I have more content than the very small item.</li>
+      <li>
+        I have lots of content. So much content that I don't know where it is
+        all going to go. I'm glad that CSS is pretty good at dealing with
+        situations where we end up with more words than expected!
+      </li>
+    </ul>
   </body>
 </html>
