--- a/tarefa2/questao1.4/index.html
+++ b/tarefa2/questao1.4/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Flexbox: Task 1</title>
+    <title>Flexbox: Task 4</title>
 
     <style>
       body {
@@ -18,36 +18,39 @@
         margin: 0;
       }
 
-      nav ul {
+      ul {
         display: flex;
+        flex-wrap: wrap;
         justify-content: space-between;
-        max-width: 700px;
+        width: 450px;
         list-style: none;
         padding: 0;
         margin: 0;
       }
 
-      nav a:link,
-      nav a:visited {
+      li {
         background-color: #4d7298;
         border: 2px solid #77a6b6;
         border-radius: 0.5em;
         color: #fff;
         padding: 0.5em;
-        display: inline-block;
-        text-decoration: none;
+        margin: 0.5em;
       }
     </style>
   </head>
 
   <body>
-    <nav>
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/about">About Us</a></li>
-        <li><a href="/products">Our Products</a></li>
-        <li><a href="/contact">Contact Us</a></li>
-      </ul>
-    </nav>
+    <ul>
+      <li>Turnip</li>
+      <li>greens</li>
+      <li>yarrow</li>
+      <li>ricebean</li>
+      <li>rutabaga</li>
+      <li>endive</li>
+      <li>cauliflower</li>
+      <li>sea lettuce</li>
+      <li>kohlrabi</li>
+      <li>amaranth</li>
+    </ul>
   </body>
 </html>
