fiz mais uns ajustes, precisa ajeitar a fonte e a disposicao da parte central das features e do footer

--- a/prova1/web1-prova1-master/index.html
+++ b/prova1/web1-prova1-master/index.html
@@ -13,11 +13,9 @@
         <div class="titulo"><!-- Aqui vai o logo e o botão de navegação -->
           <button class="logo-btn">
             <img src="imagens/logo-text.png" alt="Abstract Logo">
+            <a href="#" class="help-center">Help Center</a>
           </button>
         </div>
-        <ul class="nav-links">
-          <li><a href="#">Help Center</a></li>
-        </ul>
         <div class="botoes">
           <button class="Submit">Submit request</button>
           <button class="login">Sign In</button>
@@ -44,21 +42,20 @@
     </main>
 
     <section class="features"> <!-- aqui vai umas logos para cada uma das features -->
-      <h2>Features</h2>
       <div class="feature-item">
         <h3>Using Abstract</h3>
         <img src="imagens/abstract.png" alt="Feature 1" class="feature-img">
         <p>Abstract lets you manage, version, and document your designs in one place.</p>
       </div>
       <div class="feature-item">
-        <h3>Manage organizations, teams, and projects</h3>
-        <img src="imagens/puzzle.png" alt="Feature 2" class="feature-img">
-        <p>Use Abstract organizations, teams, and projects to organize your people and your work.</p>
-      </div>
-      <div class="feature-item">
         <h3>Manege your account</h3>
         <img src="imagens/account.png" alt="Feature 3" class="feature-img">
         <p>Configure your account settings, such as your email, profile details, and password.</p>
+      </div>
+      <div class="feature-item">
+        <h3>Manage organizations, teams, and projects</h3>
+        <img src="imagens/puzzle.png" alt="Feature 2" class="feature-img">
+        <p>Use Abstract organizations, teams, and projects to organize your people and your work.</p>
       </div>
       <div class="feature-item">
         <h3>Manege billing</h3>
@@ -82,33 +79,41 @@
       <div class="footer-features">
         <div class="feature-item">
           <h3>Abstract</h3>
-          <p>Description of Feature 1.</p>
+          <p>Branches</p>
         </div>
         <div class="feature-item">
           <h3>Community</h3>
-          <p>Description of Feature 2.</p>
+          <p>Blog</p>
+          <p>Help Center</p>
+          <p>Release Notes</p>
+          <p>Status</p>
         </div>
         <div class="feature-item">
           <h3>Resources</h3>
-          <p>Description of Feature 3.</p>
+          <p>Twitter</p>
+          <p>Liinkedln</p>
+          <p>Facebook</p>
+          <p>Dribbble</p>
+          <p>Podcast</p>
         </div>
         <div class="feature-item">
           <h3>Company</h3>
-          <p>Description of Feature 3.</p>
+          <p>About Us</p>
+          <p>Careers</p>
+          <p>Legal</p>
         </div>
         <div class="feature-item">
           <h3>Contact Us</h3>
-          <p>Description of Feature 3.</p>
-        </div>
-        <div class="feature-item">
-          <h3>Resources</h3>
-          <p>Description of Feature 3.</p>
+          <p>info@abstract.com</p>
         </div>
       </div>
       <div class="rodape">
         <img src="imagens/logo.png" alt="Abstract Logo">
+        <p class="footer-copyright">© Copyright 2022</p>
+        <p class="footer-copyright">Abstract Studio Design, Inc.</p>
+        <p class="footer-copyright">ALl rights reserved</p>
       </div>
-      <p class="footer-copyright">© 2024 Abstract. All rights reserved.</p>
+      
     </footer>
   </body>
 </html>
