--- a/prova1/web1-prova1-master/index.html
+++ b/prova1/web1-prova1-master/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abstract Clone</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.cdnfonts.com/css/gt-america-trial" rel="stylesheet" />
   </head>
   <body>
     <header>
@@ -17,7 +16,7 @@
           </button>
         </div>
         <div class="botoes">
-          <button class="Submit">Submit request</button>
+          <button class="Submit">Submit a request</button>
           <button class="login">Sign In</button>
         </div>
       </nav>
@@ -93,16 +92,16 @@
           <p>Branches</p>
         </div>
         <div class="footer-item">
-          <h3>Community</h3>
+          <h3>Resources</h3>
           <p>Blog</p>
           <p>Help Center</p>
           <p>Release Notes</p>
           <p>Status</p>
         </div>
         <div class="footer-item">
-          <h3>Resources</h3>
+          <h3>Community</h3>
           <p>Twitter</p>
-          <p>Liinkedln</p>
+          <p>Linkedln</p>
           <p>Facebook</p>
           <p>Dribbble</p>
           <p>Podcast</p>
@@ -112,7 +111,7 @@
           <p>About Us</p>
           <p>Careers</p>
           <p>Legal</p>
-          <h4>Contact Us</h4>
+          <h3>Contact Us</h3>
           <p>info@abstract.com</p>
         </div>
       </div>
