--- a/prova1/web1-prova1-master/index.html
+++ b/prova1/web1-prova1-master/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abstract Clone</title>
     <link rel="stylesheet" href="style.css">
   </head>
-  <body>
-    <header>
+  <body> <!-- comeco do body -->
+    <header> <!-- comeco do header do titulo e alguns botoes -->
       <nav>
-        <div class="titulo"><!-- Aqui vai o logo e o botão de navegação -->
+        <div class="titulo"><!-- Aqui vai o logo e alguns botoes -->
           <button class="logo-btn">
             <img src="imagens/logo-text.png" alt="Abstract Logo">
             <a href="#" class="help-center">Help Center</a>
@@ -20,9 +20,9 @@
           <button class="login">Sign In</button>
         </div>
       </nav>
-    </header>
+    </header> <!-- fim do header do titulo e alguns botoes -->
     <main>
-      <section class="titulo_secundario">
+      <section class="titulo_secundario"> <!-- comeco da zona cinza com a barra de pesquisa -->
         <div class="container">
           <h1 class="heading">How can we help?</h1>
           <label for="search" class="barra-procura">
@@ -30,10 +30,8 @@
             <i class="seta-procurar">➔</i>
           </label>
         </div>
-      </section>
-    
-
-    <section class="features"> <!-- aqui vai umas logos para cada uma das features -->
+      </section> <!-- fim da zona cinza com a barra de pesquisa -->
+    <section class="features"> <!-- começo da area das features com algumas imagens -->
       <div class="feature-item">
         <img src="imagens/abstract.png" class="feature-img">
         <div class="feature-text">
@@ -82,10 +80,10 @@
           <a href="#" class="learn-more">Learn More →</a>
         </div>
       </div>
-    </section>
+    </section> <!-- fim da area das features com algumas imagens -->
   </main>
 
-    <footer>
+    <footer> <!-- começo do footer so com umas colunas e mais uns navlinks (trocar para navlink!)-->
       <div class="footer-features">
         <div class="footer-item">
           <h3>Abstract</h3>
@@ -121,6 +119,6 @@
         <p class="footer-copyright">Abstract Studio Design, Inc.</p>
         <p class="footer-copyright">All rights reserved</p>
       </div>
-    </footer>
-  </body>
+    </footer><!-- fim do footer so com umas colunas e mais uns navlinks (trocar para navlink!)-->
+  </body> <!-- fim do body -->
 </html>
